--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body id=body>
 <h1>Test</h1>
 
+One of the biggest benefits of incorporating your small business is a lower corporate tax rate. Adjust the three sliders below to reveal your savings
+
 </body>
 <script src="dist/index.min.js"></script>
 
